Catalog Editor update
